crates/strider/tests/snapshots/v3__aarch64be__memory__array_fill.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v4" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "3" -> "v2" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v4" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "7" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "14" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "13" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0xffffffffffffffe0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "19" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="arg[2] ← w2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0xffffffffffffffec:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "23" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "26" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "29" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "31" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "30" -> "31" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "7" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "29" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "35" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "35" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "34" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "36" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="ShiftLeft:u64", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "38" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "30" -> "38" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "36" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "5" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "41" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "43" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Less\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "45" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "44" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "44" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "30" -> "44" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" -> "44" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
}
